fix: correct layout spacing by removing negative paddings and adjusting margins

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 body {
   font-family: "Roboto";
+  margin: 0px;
+  padding: 0;
 }
 
 /* header */
 header {
   padding: 24px 256px;
-  margin: -8px;
   background-color: #1f2937;
   display: flex;
   justify-content: space-between;
@@ -39,7 +40,6 @@ header a,
 .hero {
   padding: 64px 256px;
   background-color: #1f2937;
-  margin: -8px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -184,9 +184,8 @@ header a,
 
 /* footer */
 
-footer{
+footer {
   color: white;
-  margin: -8px;
   background-color: #1f2937;
   text-align: center;
   padding: 32px;
